[gd_scene load_steps=5 format=2]

[ext_resource path="res://World/Button.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Enemies/light.png" type="Texture" id=2]
[ext_resource path="res://Graphics/World/Button.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 6.70949

[node name="Button" type="Area2D"]
z_index = -1
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerDetector" type="RayCast2D" parent="."]
position = Vector2( 3.46479, 0 )
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 2

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 4

[node name="Light2D" type="Light2D" parent="Sprite"]
scale = Vector2( 0.0237888, 0.0237888 )
texture = ExtResource( 2 )
color = Color( 0.968627, 0.792157, 0.196078, 1 )
energy = 0.0

[connection signal="area_entered" from="." to="." method="_on_Button_area_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_Button_mouse_exited"]
